<?xml version="1.0"?>
<package format="2">
  <name>ros_bag_player</name>
  <version>1.0.0</version>
  <description>rosbag player</description>
  <maintainer email="magic.lixin@gmail.com">lixin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <license>MIT</license>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>message_generation</depend>
</package>
